--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </details>
         <details class="item">
           <summary>Modalità di lavoro?</summary>
-          <div class="text-muted">Iterazioni brevi, demo periodiche, repo/versioning e handover documentato.</div>
+          <div class="text-muted">Interazioni brevi, demo periodiche, repo/versioning e handover documentato.</div>
         </details>
       </section>
     </main>
